Fixed issue where miniNav would display behind text

--- a/css/app.sass
+++ b/css/app.sass
@@ -187,10 +187,8 @@ strong
 /* header that includes the banner */
 header
     background-color: $banner-color
+    position: relative
 
-    a img
-        width: 120px
-        padding-top: 5px
 
 #nav-button
     margin: 0.2em
@@ -202,6 +200,8 @@ header
 
 #banner-img
     float: right
+    width: 120px
+    margin: 5px 0
 
 
 
